@@ -112,6 +112,10 @@ static void PrintCode(const Proto* f)
    case OP_SUB:
    case OP_MUL:
    case OP_DIV:
+   case OP_BAND:
+   case OP_BOR:
+   case OP_BSHL:
+   case OP_BSHR:
    case OP_POW:
    case OP_EQ:
    case OP_LT:
